<resources>
    <string name="app_name">World Wanderer</string>
    <string name="final_score_value">00000</string>
    <string name="guesses_done">1</string>
    <string name="current_round">Round 1</string>
    <string name="your_points_for_this_guess">You got 4501 points</string>
    <string name="miles_away_from_answer">You are 97 miles away</string>
    <string name="kilometers_away_from_answer">You are 22 km away</string>
    <string name="next_round">Next Round</string>
    <string name="floating_button">floating button</string>
    <string name="image_button">ImageButton</string>
    <string name="pin">Pin</string>
    <string name="total_miles_away">1234 miles</string>
    <string name="total_kilometers_away">1234 km</string>
    <string name="game_summary">GAME SUMMARY</string>
    <string name="play_again">play again</string>
    <string name="main_menu">Main menu</string>
    <string name="final_distance">1234 miles</string>
    <string name="final_score">25000 points</string>
    <string name="total_max_score">25000 points</string>
    <string name="guess_the_location_button">Guess</string>
    <string name="app_title">World Wanderer</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="guess_the_country">Guess The Country</string>
    <string name="register_input_hint_3">Password</string>
    <string name="register_input_hint_2">Username</string>
    <string name="register_input_hint_1">Email</string>
    <string name="register_input_hint_4">Confirm Password</string>
    <string name="register_button_text">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_here_to_register">Click to register</string>
    <string name="username_or_email_hint">Username or Email</string>
    <string name="login">Login</string>
    <string name="guess_the_place">Guess The Place</string>
    <string name="logout">Logout</string>
    <string name="guess_country">Guess Country</string>
    <string name="enter_the_country_name">Enter the country name</string>
    <string name="round_number_lives_number">Round 1 / Lives: 3</string>
    <string name="total_highscores_recorded">Total highscores Recorded: 0</string>
    <string name="user_initials">A</string>
    <string name="your_email">Your email</string>
    <string name="best_score">Best score: 0</string>
    <string name="rank">Rank - N/A</string>
</resources>