<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GuessPlaceActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="#3E1B80"
        android:padding="5dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tv_round"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/guesses_done"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/tv_finalScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/final_score_value"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ll_ScoreBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:elevation="4dp"
        android:background="@drawable/black_gradient_bg"
        app:layout_constraintBottom_toTopOf="parent"
        >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/baseline_location_on_24"
            android:contentDescription="@string/pin" />

        <TextView
            android:id="@+id/tv_score_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_round"
            android:textColor="@color/white"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/your_points_for_this_guess"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            android:textStyle="bold"
            />

        <ProgressBar
            android:id="@+id/pb_score"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:progressTint="@color/yellow"
            android:progressBackgroundTint="@color/white"
            android:max="5000"
            android:progress="4501"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miles_away_from_answer"
            android:textColor="@color/white"
            android:textSize="22sp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next_round"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/next_round"
            android:textSize="22sp"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_StreetView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class = "com.google.android.gms.maps.SupportStreetViewPanoramaFragment"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_openMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:src="@drawable/baseline_map_24"
        app:backgroundTint="@color/black"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/floating_button" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_mapView"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:elevation="7dp"
        app:layout_constraintTop_toBottomOf="parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_Fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.SupportMapFragment"
        app:layout_constraintTop_toTopOf="parent"
        />

        <ImageButton
            android:id="@+id/closeMapButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/close_button"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="20dp"
            android:background="@null"
            android:contentDescription="@string/image_button" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/guess_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:src="@drawable/guess_button"
            android:text="@string/guess_the_location_button"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/floating_button" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_hintButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/baseline_tips_and_updates_24"
            app:backgroundTint="@color/black"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/floating_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>