<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LeaderboardActivity">

    <LinearLayout
        android:id="@+id/linear_layout_leaderboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:elevation="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/purple"
        >

        <TextView
            android:id="@+id/total_scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_highscores_recorded"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_leaderboard"
        app:layout_constraintBottom_toBottomOf="@+id/linear_layout_leaderboard2"
        >
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/linear_layout_leaderboard2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:elevation="3dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/user_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/baseline_account_circle_24"
            android:backgroundTint="@color/dark_green">

        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_email"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/best_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_score">
            </TextView>

        </LinearLayout>

        <TextView
            android:id="@+id/rank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rank"
            android:textColor="@color/black"
            android:gravity="end"
            android:layout_weight="1"
            android:layout_marginEnd="24dp">
        </TextView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>