<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SummaryActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/summary_map_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        class = "com.google.android.gms.maps.SupportMapFragment"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/black_gradient_bg"
        >

        <ImageView
            android:id="@+id/iv_pinImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_location_on_24"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="pin" />

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/game_summary"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_pinImage" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_game_summary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"
            tools:listitem="@layout/game_summary_list"
            app:layout_constraintBottom_toTopOf="@id/ll_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_summary" />

        <LinearLayout
            android:id="@+id/ll_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/ll_btn"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Total"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/tv_finalDistance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/final_distance"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/yellow"
                android:gravity="end"
                />

            <TextView
                android:id="@+id/tv_finalScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/final_score"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/yellow"
                android:gravity="end"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_playAgain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/play_again"
                android:background="@drawable/green_btn_bg"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_mainMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:text="@string/main_menu"
                android:background="@drawable/button_bg"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>